--- a/IQCare.CCC/BusinessProcess.CCC/BusinessProcess.CCC.csproj
+++ b/IQCare.CCC/BusinessProcess.CCC/BusinessProcess.CCC.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Triage\BPatientAdverseEventOutcomeManager.cs" />
     <Compile Include="Triage\BPatientFamilyPlanningManager.cs" />
     <Compile Include="Triage\BPatientFamilyPlanningMethod.cs" />
+    <Compile Include="Triage\BPatientPIAPregnancySymptom.cs" />
+    <Compile Include="Triage\BPatientPIAPregnancySymptomManager.cs" />
+    <Compile Include="Triage\BPatientPregnancyIntentionAssessment.cs" />
+    <Compile Include="Triage\BPatientPregnancyIntentionAssessmentManager.cs" />
     <Compile Include="Triage\BPatientPregnancyManager.cs" />
     <Compile Include="Triage\BPregnancyOutcomeLookup.cs" />
     <Compile Include="Triage\PatientPregnancyIndicatorManager.cs" />
