--- a/IQCare.CCC/DataAccess.CCC/DataAccess.CCC.csproj
+++ b/IQCare.CCC/DataAccess.CCC/DataAccess.CCC.csproj
@@ -174,7 +174,9 @@
     <Compile Include="Interface\Triage\IPatientAdverseEventOutcomeRepository.cs" />
     <Compile Include="Interface\Triage\IPatientFamilyPlanningMethodRepository.cs" />
     <Compile Include="Interface\Triage\IPatientFamilyPlanningRepository.cs" />
+    <Compile Include="Interface\Triage\IPatientPIAPregnancySymptomRepository.cs" />
     <Compile Include="Interface\Triage\IPatientPregnancyIndicatorRepository.cs" />
+    <Compile Include="Interface\Triage\IPatientPregnancyIntentionAssessmentRepository.cs" />
     <Compile Include="Interface\Triage\IPatientPregnancyRepository.cs" />
     <Compile Include="Interface\Tb\IPatientIcfActionRepository.cs" />
     <Compile Include="Interface\Tb\IPatientIcfRepository.cs" />
@@ -307,6 +309,8 @@
     <Compile Include="Repository\Triage\PatientAdverseEventOutcomeRepository.cs" />
     <Compile Include="Repository\Triage\PatientFamilyPlanningMethodRepsotory.cs" />
     <Compile Include="Repository\Triage\PatientFamilyPlanningRepository.cs" />
+    <Compile Include="Repository\Triage\PatientPIAPregnancySymptomRepository.cs" />
+    <Compile Include="Repository\Triage\PatientPregnancyIntentionAssessmentRepository.cs" />
     <Compile Include="Repository\Triage\PatientPregnancyRepository.cs" />
     <Compile Include="Repository\Triage\PatientPregnancyIndicatorRepository.cs" />
     <Compile Include="Repository\Tb\PatientIcfActionRepository.cs" />
