--- a/IQCare.CCC/IQCare.Web.CCC/IQCare.Web.CCC.csproj
+++ b/IQCare.CCC/IQCare.Web.CCC/IQCare.Web.CCC.csproj
@@ -186,6 +186,8 @@
     <Content Include="CCC\Scripts\font\robot\Roboto-Thin.woff" />
     <Content Include="CCC\Scripts\font\robot\Roboto-Thin.woff2" />
     <Content Include="CCC\Scripts\sass\mdb.scss" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
