--- a/IQCare.CCC/IQCare.Web.CCC/IQCare.Web.CCC.csproj
+++ b/IQCare.CCC/IQCare.Web.CCC/IQCare.Web.CCC.csproj
@@ -132,6 +132,7 @@
     <Content Include="CCC\UC\ucPatientBrief.ascx" />
     <Content Include="CCC\UC\ucPatientClinicalEncounter.ascx" />
     <Content Include="CCC\UC\ucPatientDetails.ascx" />
+    <Content Include="CCC\UC\ucPatientDuplicateFinder.ascx" />
     <Content Include="CCC\UC\ucPatientLabs.ascx" />
     <Content Include="CCC\UC\ucPatientLabsExtruder.ascx" />
     <Content Include="CCC\UC\ucPatientSychosocialCriteria.ascx" />
@@ -411,6 +412,13 @@
     </Compile>
     <Compile Include="CCC\UC\ucPatientDetails.ascx.designer.cs">
       <DependentUpon>ucPatientDetails.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="CCC\UC\ucPatientDuplicateFinder.ascx.cs">
+      <DependentUpon>ucPatientDuplicateFinder.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CCC\UC\ucPatientDuplicateFinder.ascx.designer.cs">
+      <DependentUpon>ucPatientDuplicateFinder.ascx</DependentUpon>
     </Compile>
     <Compile Include="CCC\UC\ucPatientLabs.ascx.cs">
       <DependentUpon>ucPatientLabs.ascx</DependentUpon>
