--- a/IQCare.CCC/IQCare.Web.CCC/IQCare.Web.CCC.csproj
+++ b/IQCare.CCC/IQCare.Web.CCC/IQCare.Web.CCC.csproj
@@ -425,7 +425,8 @@
     <Content Include="CCC\Scripts\sass\mdb.scss" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
-    <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
+    <None Include="Properties\PublishProfiles\Localhost.pubxml" />
+    <None Include="Properties\PublishProfiles\Production Server.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
