Intial App Settings

--- a/Solutions/IQCare.Web.API/IQCare.Web.API/appsettings.json
+++ b/Solutions/IQCare.Web.API/IQCare.Web.API/appsettings.json
@@ -13,6 +13,8 @@
     }
   },
   "ILServer": {
-    "Url": "http://192.168.43.183:9721"
+    "Url": "http://192.168.43.183:9721",
+    "ProcessIncomingMessages": "True",
+    "EnableOutgoingMessages":  "False"
   }
 }
