--- a/IQCare.CCC/Entities.CCC/Entities.CCC.csproj
+++ b/IQCare.CCC/Entities.CCC/Entities.CCC.csproj
@@ -188,6 +188,7 @@
     <Compile Include="PSmart\PatientProgramStart.cs" />
     <Compile Include="PSmart\SHR.cs" />
     <Compile Include="PSmart\SmartcardPatientList.cs" />
+    <Compile Include="Screening\patientCervicalCancerScreening.cs" />
     <Compile Include="Screening\PatientScreening.cs" />
     <Compile Include="Sync\Sync.cs" />
     <Compile Include="Tanners\PatientTannersStaging.cs" />
