--- a/IQCare.CCC/BusinessProcess.CCC/BusinessProcess.CCC.csproj
+++ b/IQCare.CCC/BusinessProcess.CCC/BusinessProcess.CCC.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Pharmacy\BPatientPharmacyDispense.cs" />
     <Compile Include="Pharmacy\BPharmacyOrder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screening\BPatientCervicalCancerScreeningManager.cs" />
     <Compile Include="Screening\BPatientScreeningManager.cs" />
     <Compile Include="Tb\BPatientTBRx.cs" />
     <Compile Include="Triage\BPatientAdverseEventOutcome.cs" />
