--- a/IQCare.CCC/IQCare.Web.CCC/Web.config
+++ b/IQCare.CCC/IQCare.Web.CCC/Web.config
@@ -66,7 +66,7 @@
   <system.web>
     <!--<sessionState timeout="120"></sessionState>-->
     <sessionState timeout="60" mode="InProc" cookieless="false"/>
-    <pages autoEventWireup="false" buffer="true" enableEventValidation="true" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
+    <pages autoEventWireup="false" buffer="true" enableEventValidation="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <controls>
         <add tagPrefix="IQ" namespace="IQCare.IQControl" assembly="IQCare.IQControl"/>
         <add tagPrefix="IQ" src="~/ProgressControl.ascx" tagName="ProgressControl"/>
