--- a/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
+++ b/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
@@ -185,6 +185,9 @@
     <None Remove="Scripts\2.0.0\43_UpdateUIDIndicators.sql" />
     <None Remove="Scripts\2.0.1\07_AdditionalServiceAreaFields.sql" />
     <None Remove="Scripts\2.0.1\07_API_PatientsView.sql" />
+    <None Remove="Scripts\2.0.1\08_tbl_PatientClinicalReviewChecklist.sql" />
+    <None Remove="Scripts\2.0.1\09_sp_getPatientCLinicalReviewHistory.sql" />
+    <None Remove="Scripts\2.0.1\10_sp_saveClinicalReview.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -388,6 +391,9 @@
     <EmbeddedResource Include="Scripts\2.0.0\42DefaultConstraintsSection.sql" />
     <EmbeddedResource Include="Scripts\2.0.0\43_UpdateUIDIndicators.sql" />
     <EmbeddedResource Include="Scripts\2.0.1\07_API_PatientsView.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\08_tbl_PatientClinicalReviewChecklist.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\09_sp_getPatientCLinicalReviewHistory.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\10_sp_saveClinicalReview.sql" />
   </ItemGroup>
 
   <ItemGroup>
