--- a/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
+++ b/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
@@ -179,6 +179,14 @@
     <None Remove="Scripts\2.0.1\04_LO_HTSLabRegister.sql" />
     <None Remove="Scripts\2.0.1\05_LO_MaternityRegister.sql" />
     <None Remove="Scripts\2.0.1\06_LO_PNCRegister.sql" />
+    <None Remove="Scripts\2.0.0\41_DO_Create_View_IndicatorResults.sql" />
+    <None Remove="Scripts\2.0.0\42DefaultConstraintsSection.sql" />
+    <None Remove="Scripts\2.0.0\43_UpdateUIDIndicators.sql" />
+    <None Remove="Scripts\2.0.1\07_AdditionalServiceAreaFields.sql" />
+    <None Remove="Scripts\2.0.1\07_API_PatientsView.sql" />
+    <None Remove="Scripts\2.0.1\08_tbl_PatientClinicalReviewChecklist.sql" />
+    <None Remove="Scripts\2.0.1\09_sp_getPatientCLinicalReviewHistory.sql" />
+    <None Remove="Scripts\2.0.1\10_sp_saveClinicalReview.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -377,6 +385,13 @@
     <EmbeddedResource Include="Scripts\2.0.1\04_LO_HTSLabRegister.sql" />
     <EmbeddedResource Include="Scripts\2.0.1\05_LO_MaternityRegister.sql" />
     <EmbeddedResource Include="Scripts\2.0.1\06_LO_PNCRegister.sql" />
+    <EmbeddedResource Include="Scripts\2.0.0\41_DO_Create_View_IndicatorResults.sql" />
+    <EmbeddedResource Include="Scripts\2.0.0\42DefaultConstraintsSection.sql" />
+    <EmbeddedResource Include="Scripts\2.0.0\43_UpdateUIDIndicators.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\07_API_PatientsView.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\08_tbl_PatientClinicalReviewChecklist.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\09_sp_getPatientCLinicalReviewHistory.sql" />
+    <EmbeddedResource Include="Scripts\2.0.1\10_sp_saveClinicalReview.sql" />
   </ItemGroup>
 
   <ItemGroup>
