--- a/IQCare.CCC/IQCare.Web.CCC/Web.config
+++ b/IQCare.CCC/IQCare.Web.CCC/Web.config
@@ -38,7 +38,7 @@
     <add key="RadiologyServiceArea" value="Imaging"/>
     <add key="InteropApiPort" value="1155"/>
     <add key="ApiSiteName" value=""/>
-    <add key="ilServer" value="http://localhost:9721"/>
+    <add key="ilServer" value="http://192.168.100.80:9721"/>
     <add key="InteropApiIQCareUri" value="http://localhost/IQCare/"/>
   </appSettings>
   <system.runtime.remoting>
