changes to add new regimen lines in IQCare

--- a/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
+++ b/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
@@ -454,6 +454,8 @@
     <None Remove="Scripts\2.2.2\01_HeiMilestone.sql" />
     <None Remove="Scripts\2.2.2\03_AlterPharmacyDrugVisitDetailView.sql" />
     <None Remove="Scripts\2.2.2\04_AddMissingRegimenLineList.sql" />
+    <None Remove="Scripts\2.2.2\05_NewRegimenLine.sql" />
+    <None Remove="Scripts\2.2.2\06_NewRegimenLineRank.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -913,6 +915,8 @@
     <EmbeddedResource Include="Scripts\2.2.2\01_HeiMilestone.sql" />
     <EmbeddedResource Include="Scripts\2.2.2\03_AlterPharmacyDrugVisitDetailView.sql" />
     <EmbeddedResource Include="Scripts\2.2.2\04_AddMissingRegimenLineList.sql" />
+    <EmbeddedResource Include="Scripts\2.2.2\05_NewRegimenLine.sql" />
+    <EmbeddedResource Include="Scripts\2.2.2\06_NewRegimenLineRank.sql" />
   </ItemGroup>
 
   <ItemGroup>
