resolving errors on greencard and adding new release of IQCare

--- a/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
+++ b/Solutions/IQCare.Core/IQCare.Core.DbMigration/IQCare.Core.DbMigration.csproj
@@ -457,6 +457,7 @@
     <None Remove="Scripts\2.2.2\05_NewRegimenLine.sql" />
     <None Remove="Scripts\2.2.2\06_NewRegimenLineRank.sql" />
     <None Remove="Scripts\2.2.2\07_D4TCorrectRegimenCode.sql" />
+    <None Remove="Scripts\2.2.2\08_IQCareFinalRelease.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -919,6 +920,7 @@
     <EmbeddedResource Include="Scripts\2.2.2\05_NewRegimenLine.sql" />
     <EmbeddedResource Include="Scripts\2.2.2\06_NewRegimenLineRank.sql" />
     <EmbeddedResource Include="Scripts\2.2.2\07_D4TCorrectRegimenCode.sql" />
+    <EmbeddedResource Include="Scripts\2.2.2\08_IQCareFinalRelease.sql" />
   </ItemGroup>
 
   <ItemGroup>
