--- a/IQCare.CCC/Entities.CCC/Entities.CCC.csproj
+++ b/IQCare.CCC/Entities.CCC/Entities.CCC.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Baseline\PatientTreatmentInitiation.cs" />
     <Compile Include="ClinicalSummary\ClinicalSummary.cs" />
     <Compile Include="Consent\PatientConsent.cs" />
+    <Compile Include="Covid19Screening.cs" />
     <Compile Include="Encounter\ComplaintsHistory.cs" />
     <Compile Include="Encounter\LabDetailsEntity.cs" />
     <Compile Include="Encounter\LabResultsEntity.cs" />
