--- a/IQCare.CCC/IQCare.CCC.UILogic/IQCare.CCC.UILogic.csproj
+++ b/IQCare.CCC/IQCare.CCC.UILogic/IQCare.CCC.UILogic.csproj
@@ -98,6 +98,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\IQCare.Web.UILogic.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -208,6 +212,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PatientLabOrderManager.cs" />
     <Compile Include="Reporting\ReportingResultsManager.cs" />
+    <Compile Include="Screening\Covid19ScreeningManager.cs" />
     <Compile Include="Screening\PatientScreeningManager.cs" />
     <Compile Include="TannersStagingManager.cs" />
     <Compile Include="Tb\PatientTBRxManager.cs" />
